[gd_scene load_steps=6 format=3 uid="uid://drs3xe7gcb303"]

[ext_resource type="PackedScene" uid="uid://1xt8ttogo0t7" path="res://nodes/utils/centering.tscn" id="1_p6ya7"]
[ext_resource type="Script" path="res://nodes/scenes/option_scene.gd" id="1_u2gx5"]
[ext_resource type="PackedScene" uid="uid://b3ygu6pkadmsm" path="res://nodes/objects/note_frame.tscn" id="2_jrwln"]
[ext_resource type="PackedScene" uid="uid://bkjikw1mkxf44" path="res://nodes/objects/menu.tscn" id="4_ycfn8"]
[ext_resource type="PackedScene" uid="uid://b4xurpdejwh2e" path="res://nodes/objects/menu_list.tscn" id="5_hhulg"]

[node name="OptionScene" type="Node2D"]
script = ExtResource("1_u2gx5")

[node name="Centering" parent="." instance=ExtResource("1_p6ya7")]

[node name="NoteFrame" parent="Centering" instance=ExtResource("2_jrwln")]
beat_line = false

[node name="BackMenu" parent="Centering" instance=ExtResource("4_ycfn8")]
rotation = -1.5708
target_coverage = 0.2
target_rotation = -1.571
label = "Back"

[node name="MenuList" parent="Centering" instance=ExtResource("5_hhulg")]

[node name="OffsetMenu" parent="Centering/MenuList" instance=ExtResource("4_ycfn8")]
label = "Offset"

[connection signal="pressed" from="Centering/BackMenu" to="." method="_on_back_menu_pressed"]
[connection signal="selected" from="Centering/MenuList" to="." method="_on_menu_list_selected"]
